fix(waybar): urgent color is hard to see

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -119,7 +119,7 @@
 
 /* Contains an urgent window */
 #workspaces button.urgent {
-    color: @black;
+    color: @red;
     background: @warning;
 }
 
